<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DriveNext ЛР 5</string>
    <string name="tagline">Поможем найти твою следующую поездку</string>
    <string name="no_connection_title">Нет подключения\nк интернету</string>
    <string name="no_connection_message">Проверьте подключение и повторите попытку</string>
    <string name="retry">Повторить попытку</string>
    <string name="skip">Пропустить</string>
    <string name="next">Далее</string>
    <string name="start">Поехали</string>
    <string name="login_title">Вход в DriveNext</string>
    <string name="login_placeholder">Экран входа будет реализован в следующей лабораторной работе</string>
    <string name="main_title">Главный экран DriveNext</string>
    <string name="slide_1_title">Аренда автомобилей</string>
    <string name="slide_1_description">Открой для себя удобный и доступный способ передвижения</string>
    <string name="slide_2_title">Безопасно и удобно</string>
    <string name="slide_2_description">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="slide_3_title">Лучшие предложения</string>
    <string name="slide_3_description">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="connection_icon_description">Нет подключения к интернету</string>
    <string name="slide_image_description">Иллюстрация преимущества DriveNext</string>
    <string name="sign_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="sign_in_title">Войдите в аккаунт</string>
    <string name="sign_in_hint">Пожалуйста, введите свои данные</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="google_sign_in">Войти через Google</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="agree_terms">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="back">Назад</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="birth_date">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="profile_photo">Фото профиля</string>
    <string name="license_number">Номер водительского удостоверения</string>
    <string name="issue_date">Дата выдачи</string>
    <string name="license_photo">Фото водительского удостоверения</string>
    <string name="passport_photo">Фото паспорта</string>
    <string name="upload_photo">Загрузить фото</string>
    <string name="registration_success_title">Поздравляем</string>
    <string name="registration_success_header">Пользуйтесь с удовольствием</string>
    <string name="registration_success_message">Вы успешно зарегистрировались. Обработка ваших персональных данных займет около двух часов.</string>
    <string name="invalid_email">Введите корректный адрес электронной почты.</string>
    <string name="passwords_mismatch">Пароли не совпадают.</string>
    <string name="terms_required">Необходимо согласиться с условиями обслуживания и политикой конфиденциальности.</string>
    <string name="required_fields">Пожалуйста, заполните все обязательные поля.</string>
    <string name="invalid_birth_date">Введите корректную дату рождения.</string>
    <string name="invalid_issue_date">Введите корректную дату выдачи.</string>
    <string name="photos_required">Пожалуйста, загрузите все необходимые фото.</string>
    <string name="invalid_license">Номер удостоверения должен содержать 10 символов.</string>
    <string name="catalog_title">Найдите автомобиль</string>
    <string name="search_hint">Введите марку или модель</string>
    <string name="book">Забронировать</string>
    <string name="details">Детали</string>
    <string name="settings">Настройки</string>
    <string name="favorites">Избранное</string>
    <string name="home">Главная</string>
    <string name="profile">Профиль</string>
    <string name="my_bookings">Мои бронирования</string>
    <string name="theme">Тема</string>
    <string name="notifications">Уведомления</string>
    <string name="connect_car">Подключить свой автомобиль</string>
    <string name="help">Помощь</string>
    <string name="invite_friend">Пригласи друга</string>
    <string name="logout">Выйти из профиля</string>
    <string name="load_error">Не удалось загрузить данные. Попробуйте снова.</string>
    <string name="add_favorite">Добавить в избранное</string>
    <string name="remove_favorite">Удалить из избранного</string>
    <string name="rental_title">Оформление аренды</string>
    <string name="start_date">Дата начала</string>
    <string name="end_date">Дата окончания</string>
    <string name="continue_label">Продолжить</string>
    <string name="good_trip">Удачной поездки!</string>
    <string name="booking_success_message">Ваше бронирование успешно создано.</string>
    <string name="to_bookings">Перейти к своим бронированиям</string>
    <string name="become_landlord">Стать арендодателем</string>
    <string name="start_label">Начать</string>
    <string name="car_address">Адрес расположения автомобиля</string>
    <string name="car_year">Год выпуска</string>
    <string name="car_brand">Марка автомобиля</string>
    <string name="car_model">Модель автомобиля</string>
    <string name="transmission">Тип трансмиссии</string>
    <string name="mileage">Пробег</string>
    <string name="description">Описание автомобиля</string>
    <string name="send">Отправить</string>
    <string name="add_car_photos">Добавление фотографий автомобиля</string>
    <string name="choose_photos">Выбрать до 5 фотографий</string>
    <string name="car_added">Автомобиль успешно добавлен и отправлен на одобрение</string>
    <string name="to_home">На главную</string>
    <string name="photo_selected">Фото выбрано</string>
</resources>
